# FilAgent

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitkeep  .pdm-python  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  AGENTS.md  AUDIT_POST_MERGE_MLOPS.md  AUDIT_REPORT_FILAGENT.md  AUDIT_SUMMARY.txt  CHANGELOG.md  CI_CD_VERIFICATION_CHECKLIST.md  CLAUDE.md  CLOSE_OUTDATED_PRS.md  CODE_QUALITY.md  COMPLIANCE_GUARDIAN_SUMMARY.md  COVERAGE_ANALYSIS_README.md  COVERAGE_ANALYSIS_REPORT.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_VALIDATION_REPORT.md  DOCXPERT_AGENT_FIX.md  Dockerfile.gradio  EXECUTIVE_SUMMARY_AUDIT.md  FIXTURES.md  FIXTURE_ENHANCEMENTS.md  FilAgent.md  GUIDE_COMPLET_FILAGENT.md  GUIDE_COMPLET_FILAGENT_FINAL.md  IMPLEMENTATION_REPORT_PR262.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  MANIFEST.in  MCP_STATUS_COMPLET.md  METRICS_DASHBOARD.md  (+59 more)
.claude/: settings.local.json
.github/: BADGES.md  WORKFLOWS.md  WORKFLOWS_INVENTORY.md  WORKFLOWS_QUICK_REFERENCE.md  WORKFLOWS_README.md  WORKFLOW_OPTIMIZATION_REPORT.md  copilot-instructions.md  dependabot.yml
.github/ISSUES/: README.md  create_issues.sh  issue-1-typed-result.md  issue-2-result-reference.md  issue-3-enhanced-task-executor.md  issue-4-aggregator.md  issue-5-transformer.md  issue-6-orchestration-plan.md  issue-7-enhanced-planner.md
.github/ISSUE_TEMPLATE/: bug_report.md  workflow-python-dependency-conflict.md
.github/agents/: Dependency.agent.md  DocXpert.agent.md  ai-benchmark-specialist.agent.md  developpeur-fullstack.agent.md  my-agent.agent.md  qa-validation-architect.agent.md  securecloud-architect.agent.md  test-coverage-revieweragent.md  test-coverage-specialist.agent.md
.github/refs/: fix-pypdf3.9.0-security.json
.github/workflows/: auto-fix-linting.yml  auto-format.yml  benchmarks.yml  claude-code-review.yml  codeql-advanced.yml  codeql-security.yml  codeql.yml  dependencies.yml  deploy.yml  documentation.yml  lint.yml  (+4 more)
architecture/: __init__.py  router.py
config/: agent.perplexity.yaml  agent.yaml  compliance_rules.yaml  eval_targets.yaml  policies.yaml  prometheus.yml  prometheus_alerts.yml  prometheus_targets.json  prometheus_targets_docker.json  provenance.yaml  retention.yaml  telemetry.yaml
docs/: BENCHMARKS.md  CI_CD_UPGRADE_SUMMARY.md  CI_FIX_DOCUMENTATION.md  CODEQL_VERIFICATION.md  CODEQL_VERIFICATION_SUMMARY.md  CODEQL_WORKFLOWS.md  COMPLIANCE_FEATURES.md  COMPLIANCE_GUARDIAN.md  CONTRIBUTING.md  DEPENDENCY_CONFLICT_RESOLUTION.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_UPDATE_PR241.md  DEPLOYMENT_DOCUMENT_ANALYZER.md  DOCUMENTATION_STRUCTURE.md  DOCUMENT_ANALYZER_QUICK_START.md  FEEDBACK_SYSTEM.md  GUIDE_ANALYSEUR_DOCUMENTS.md  GUIDE_SELECTION_MODELES_PERPLEXITY.md  IMPLEMENTATION_SUMMARY_MONITORING.md  INDEX.md  KPIS_SLOS_ARCHITECTURE.md  MONITORING_ARCHITECTURE.md  MONITORING_SETUP.md  MUTATION_TESTING.md  OPENTELEMETRY_USAGE.md  PDM_QUICK_REFERENCE.md  PERPLEXITY_INTEGRATION.md  PHASE_6_1_ERROR_HANDLING_SUMMARY.md  PHASE_6_2_TESTING_SUMMARY.md  PHASE_6_3_COMPLIANCE_REPORT.md  PROMETHEUS_DASHBOARD.md  PROMETHEUS_PROMQL_EXAMPLES.md  PROMETHEUS_QUICKSTART.md  PROMETHEUS_SETUP.md  PROMPT_TEMPLATES.md  QUICK_START_TELEMETRY.md  SANDBOX_SECURITY.md  SECURITY_ENHANCEMENTS.md  SECURITY_FIX_PATH_VALIDATION.md  SEMANTIC_CACHE.md  (+5 more)
eval/: __init__.py  base.py  humaneval.py  mbpp.py  metrics.py  planning_validator.py  runner.py  target_validator.py
examples/: cache_demo.py  eval_target_validation_example.py  htn_integration_example.py  perplexity_example.py  template_ab_testing_example.py  vector_store_example.py
grafana/: dashboard_htn.json  dashboard_security_observability.json
memory/: __init__.py  analytics.py  analytics.sqlite  cache_manager.py  episodic.py  ingestion.py  retention.py  semantic.py
planner/: README.md  __init__.py  compliance_guardian.py  executor.py  metrics.py  plan_cache.py  planner.py  policy_loader.py  state_machine.yaml  task_graph.py  verifier.py  work_stealing.py
policy/: engine.py  pii.py
prompts/: README.md
runtime/: __init__.py  agent.py  config.py  context_builder.py  exceptions.py  metrics.py  model_interface.py  server.py  telemetry.py  template_loader.py  tool_executor.py  tool_parser.py
scripts/: README.md  README_PR_MANAGEMENT.md  benchmark_perplexity_models.py  check_coverage_regression.py  demo_model_comparison.py  generate_badges.py  generate_prometheus_targets.py  generate_test_metrics.py  install_prometheus_monitoring.sh  install_test_deps.sh  issue_benchmarks.md  issue_policy_engine.md  issue_tests.md  manage_prs.md  manage_prs.sh  migrate_to_pdm.sh  repo_manager.py  run_tests.sh  setup-dev.sh  start_prometheus.sh  test_metrics.py  test_metrics_basic.py  update_dependencies.sh  validate_openapi.py  validate_prometheus_setup.py
tests/: README.md  README_E2E_COMPLIANCE.md  README_SEMANTIC_TESTS.md  README_TESTING.md  TEST_COVERAGE.md  TEST_MODEL_INTERFACE_SUMMARY.md  __init__.py  conftest.py  scripts_prometheus_test_report.md  test_agent_cache_integration.py  test_agent_compliance_guardian_initialization.py  test_agent_core_comprehensive.py  test_agent_exception_handling.py  test_agent_improvements.py  test_agent_requires_planning.py  test_analytics.py  test_architecture_router.py  test_benchmarks.py  test_cache_manager.py  test_calculator_ast_coverage.py  test_calculator_comprehensive.py  test_codeql_workflows.py  test_compliance_document_analyzer.py  test_compliance_flow.py  test_compliance_guardian.py  test_compliance_guardian_comprehensive.py  test_compliance_integration.py  test_config.py  test_config_persistence_simple.py  test_constraints.py  test_context_builder_templates.py  test_data_generators.py  test_document_analyzer_error_handling.py  test_document_analyzer_pme.py  test_document_analyzer_security.py  test_eddsa_extended.py  test_eval_validators.py  test_feedback_api.py  test_file_reader_comprehensive.py  test_fixtures.py  (+47 more)
tools/: Dockerfile.sandbox  __init__.py  base.py  calculator.py  document_analyzer_pme.py  file_reader.py  python_sandbox.py  registry.py
(+123 files in other folders)
