[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filagent"
version = "0.3.0"
description = "Agent basé sur LLM avec gouvernance, traçabilité légale et conformité (Loi 25, AI Act, NIST AI RMF)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "fil04331", email = "fil04331@github.com"}
]
maintainers = [
    {name = "fil04331", email = "fil04331@github.com"}
]
keywords = [
    "llm",
    "agent",
    "governance",
    "traceability",
    "compliance",
    "loi25",
    "ai-act",
    "nist-ai-rmf",
    "htn-planning",
    "hierarchical-task-network"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

dependencies = [
    # Core dependencies
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",

    # LLM integration
    "llama-cpp-python>=0.2.0",

    # API Server
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic-settings>=2.0.0",

    # Database & Memory
    "aiosqlite>=0.19.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",

    # Logging & Observability
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",

    # Security
    "cryptography>=41.0.0",
    "pyopenssl>=23.3.0",

    # Data handling
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "datasets",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
# GPU support
gpu = [
    "faiss-gpu>=1.7.4",
]

# Alternative LLM backends
vllm = [
    "transformers>=4.35.0",
    "vllm>=0.2.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]

# Testing & validation
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "openapi-spec-validator>=0.7.1",
    "schemathesis>=3.19.0",
    "hypothesis>=6.92.0",
]

# All optional dependencies
all = [
    "filagent[gpu,vllm,dev,test]",
]

[project.urls]
Homepage = "https://github.com/fil04331/FilAgent"
Repository = "https://github.com/fil04331/FilAgent"
Issues = "https://github.com/fil04331/FilAgent/issues"
Documentation = "https://github.com/fil04331/FilAgent/blob/main/README.md"

[project.scripts]
filagent = "runtime.server:main"
filagent-eval = "eval.base:main"

# Setuptools configuration
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "runtime*",
    "memory*",
    "planner*",
    "tools*",
    "policy*",
    "provenance*",
    "eval*",
]
exclude = [
    "tests*",
    "scripts*",
    "docs*",
    "examples*",
    "audit*",
    "logs*",
    "models*",
    "grafana*",
    ".github*",
    ".hypothesis*",
]

[tool.setuptools.package-data]
"*" = [
    "*.yaml",
    "*.yml",
    "*.json",
    "*.toml",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
  | \.pytest_cache
  | \.mypy_cache
  | __pycache__
  | models/weights
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/migrations/*",
    "*/models/weights/*",
    "*/venv/*",
    "*/.venv/*",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-config=pyproject.toml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "llm: Tests requiring LLM inference",
    "gpu: Tests requiring GPU",
    "compliance: Compliance and governance tests",
    "htn: HTN planning tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = [
    "runtime",
    "memory",
    "planner",
    "tools",
    "policy",
    "provenance",
    "eval",
]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/models/weights/*",
    "*/examples/*",
    "*/scripts/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "llama_cpp.*",
    "faiss.*",
    "sentence_transformers.*",
    "prometheus_client.*",
    "datasets.*",
]
ignore_missing_imports = true

# Flake8 configuration (via pyproject.toml plugin or flake8 config file)
# Note: Flake8 doesn't natively support pyproject.toml, use .flake8 file instead
# But we document expected config here for reference
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    "models/weights",
]
max-complexity = 10
per-file-ignores = [
    "__init__.py:F401",
]
