[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filagent"
version = "0.1.0"
description = "FilAgent - Hierarchical Task Network Agent with LLM integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "pyyaml>=6.0.1,<7.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",

    # LLM integration
    "llama-cpp-python>=0.2.0,<1.0.0",

    # API Server
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",

    # Database & Memory
    "aiosqlite>=0.19.0,<1.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",

    # Logging & Observability
    "structlog>=23.2.0,<25.0.0",
    "prometheus-client>=0.19.0,<1.0.0",

    # Security
    "cryptography>=41.0.0,<43.0.0",
    "pyopenssl>=23.3.0,<25.0.0",

    # Data handling
    "pandas>=2.1.0,<3.0.0",
    "pyarrow>=14.0.0,<16.0.0",
    "datasets>=2.14.0,<3.0.0",
    "filelock>=3.13.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",

    # OpenAPI validation & contract testing
    "openapi-spec-validator>=0.7.1,<1.0.0",
    "schemathesis>=3.19.0,<4.0.0",

    # Code quality
    "black>=23.11.0,<25.0.0",
    "flake8>=6.1.0,<8.0.0",
    "mypy>=1.7.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
]

gpu = [
    "faiss-gpu>=1.7.4,<2.0.0",
]

llm-full = [
    "transformers>=4.35.0,<5.0.0",
    "vllm>=0.2.0,<1.0.0",
]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=runtime",
    "--cov=planner",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["runtime", "planner"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
