[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "filagent"
version = "2.0.0"
description = "LLM Agent with Enterprise Governance, Legal Traceability & HTN Planning"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "FilAgent Team", email = "contact@filagent.ai" },
]
maintainers = [
    { name = "FilAgent Team", email = "contact@filagent.ai" },
]
keywords = ["llm", "agent", "governance", "compliance", "htn", "ai", "quebec", "loi-25"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Python version requirement - Support 3.10 to 3.14
requires-python = ">=3.10,<3.15"

# Core dependencies with updated versions for Python 3.14 compatibility
dependencies = [
    # Core dependencies
    "pyyaml>=6.0.1,<7",
    "pydantic>=2.6.0,<3",
    "python-dotenv>=1.0.0,<2",
    "pydantic-settings>=2.0.3,<3",

    # API Server
    "fastapi>=0.121.0,<0.122",  # Includes starlette 0.47.2+ (CVE-2024-47874, CVE-2025-54121)
    "starlette>=0.40.0",  # Security: CVE-2024-47874 (DoS multipart/form-data)
    "python-multipart>=0.0.18",  # Security: CVE-2024-53981, CVE-2024-24762 (DoS, ReDoS)
    "uvicorn>=0.38.0,<0.39",

    # Database & Memory
    "aiosqlite>=0.19.0,<0.21",

    # Logging & Observability
    "structlog>=23.2.0,<26",
    "prometheus-client>=0.19.0,<0.21",

    # Security
    "cryptography>=44.0.1,<45",  # Security fix for CVE-2024-6119, CVE-2024-12797
    "pyopenssl>=23.3.0,<25",

    # Validation & Guardrails
    "jsonschema>=4.19.0,<5",
    "openapi-spec-validator>=0.7.1,<0.8",
    "schemathesis>=3.19.0,<4",

    # HTTP clients & integration
    "requests>=2.32.4,<3",  # Security: CVE-2024-47081 (.netrc credentials leak)

    # Data handling - Updated for Python 3.14 compatibility
    "pandas>=2.3.3,<3",
    "pyarrow>=17.0.0",  # Version 17+ has Python 3.14 support
    "datasets>=4.0.0,<5",  # Updated to version 4 for better compatibility
    "filelock>=3.13.0,<4",

    # Document processing
    "PyPDF2>=3.0.0,<4",  # PDF document analysis for DocumentAnalyzerPME tool
    "python-docx>=1.1.0,<2",  # Word document analysis (imports as 'docx')
    "openpyxl>=3.0.0,<4",  # Excel document analysis for DocumentAnalyzerPME tool
    "openai>=2.8.0",
    "gradio>=5.11.0",
    "llama-cpp-python<0.3,>=0.2.0",
]

[project.optional-dependencies]
# ML/LLM dependencies
ml = [
    "llama-cpp-python>=0.2.0,<0.3",
    "faiss-cpu>=1.8.0,<1.9",
    "sentence-transformers>=2.2.2,<3",
    "openai>=2.8.0",  # For Perplexity API (OpenAI-compatible) - aligned with main deps
]

# GPU support
gpu = [
    "faiss-gpu>=1.8.0,<1.9",
]

# Advanced LLM features
advanced = [
    "transformers>=4.53.0,<5",  # Security fix: CVE-2023-6730, multiple ReDoS vulnerabilities
    "vllm>=0.2.0,<0.3",
]

# Development dependencies
dev = [
    "pytest>=7.4.0,<9",
    "pytest-asyncio>=0.21.0,<0.25",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0,<4",
    "pytest-timeout>=2.2.0,<3",
    "pytest-subtests>=0.12.0,<0.15",
    "psutil>=5.9.0,<7",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "isort>=5.12.0,<6",
    "pre-commit>=3.5.0,<4",
    "mkdocs>=1.5.0,<2",
    "mkdocs-material>=9.4.0,<10",
    "pip-audit>=2.9.0",
    "bandit>=1.9.1",
    "safety>=3.0.0,<4",
    "pylint>=4.0.3",
]

# Benchmarking dependencies
benchmark = [
    "humaneval>=1.0.0,<2",
    "mbpp>=1.0.0,<2",
]

# UI dependencies
ui = [
    "gradio>=4.7.1,<5",
]

[project.urls]
Homepage = "https://github.com/fil04331/FilAgent"
Documentation = "https://github.com/fil04331/FilAgent/tree/main/docs"
Repository = "https://github.com/fil04331/FilAgent.git"
Issues = "https://github.com/fil04331/FilAgent/issues"
Changelog = "https://github.com/fil04331/FilAgent/blob/main/CHANGELOG.md"

[project.scripts]
filagent = "runtime.server:main"
filagent-mcp = "mcp_server:main"

[tool.pdm]
distribution = false  # Don't build distributions by default

[tool.pdm.scripts]
# Development scripts
test = "pytest"
test-cov = "pytest --cov=runtime --cov=planner --cov=tools --cov=memory --cov=policy --cov-branch --cov-report=html --cov-report=term --cov-report=term-missing"
test-unit = "pytest -m unit"
test-integration = "pytest -m integration"
test-compliance = "pytest -m compliance"
test-e2e = "pytest -m e2e"
test-performance = "pytest -m performance"

# Formatting and linting
format = "black ."
lint = "flake8 ."
typecheck = "mypy ."
check = { composite = ["format", "lint", "typecheck"] }

# Server commands
server = "python runtime/server.py"
server-dev = "uvicorn runtime.server:app --reload"
mcp = "python mcp_server.py"

# Security scanning
security = "pip-audit"
bandit = "bandit -r runtime/ planner/ tools/ -f json"

# Documentation
docs = "mkdocs serve"
docs-build = "mkdocs build"

# Dependency management
lock = "pdm lock"
sync = "pdm sync"
update = "pdm update"
outdated = "pdm list --outdated"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pdm-build
    | \.pdm-plugins
    | \.pytest_cache
    | \.ruff_cache
    | \.tox
    | \.venv
    | __pypackages__
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
follow_imports = "silent"
no_implicit_reexport = false
strict_optional = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--ignore=__pypackages__",
    "--ignore=venv",
    "--ignore=.venv",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower)",
    "compliance: Compliance/conformity tests",
    "e2e: End-to-end tests (slowest)",
    "slow: Tests that take more than 5 seconds",
    "performance: Performance and load tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["runtime", "planner", "tools", "memory", "policy"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/__pypackages__/*",
    "*/gradio_app*.py",
    "*/mcp_server.py",
    "*/examples/*",
    "*/scripts/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 30.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "__pypackages__"]
severity = "medium"
confidence = "medium"
