# Setup configuration for FilAgent
# This file provides additional configuration for tools that don't support pyproject.toml

[metadata]
name = FilAgent
version = 0.3.0
description = Agent basé sur LLM avec gouvernance, traçabilité légale et conformité
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fil04331/FilAgent
author = fil04331
author_email = fil04331@github.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml>=6.0.1
    pydantic>=2.5.0
    python-dotenv>=1.0.0
    llama-cpp-python>=0.2.0
    fastapi>=0.104.0
    uvicorn>=0.24.0
    pydantic-settings>=2.0.0
    aiosqlite>=0.19.0
    faiss-cpu>=1.7.4
    sentence-transformers>=2.2.2
    structlog>=23.2.0
    prometheus-client>=0.19.0
    cryptography>=41.0.0
    pyopenssl>=23.3.0
    pandas>=2.1.0
    pyarrow>=14.0.0
    datasets
    filelock>=3.13.0

[options.packages.find]
where = .
include =
    runtime*
    memory*
    planner*
    tools*
    policy*
    provenance*
    eval*
exclude =
    tests*
    scripts*
    docs*
    examples*
    audit*
    logs*
    models*
    grafana*

[options.package_data]
* = *.yaml, *.yml, *.json, *.toml

[options.extras_require]
gpu =
    faiss-gpu>=1.7.4
vllm =
    transformers>=4.35.0
    vllm>=0.2.0
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    black>=23.11.0
    flake8>=6.1.0
    mypy>=1.7.0
    isort>=5.12.0
    pre-commit>=3.5.0
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    openapi-spec-validator>=0.7.1
    schemathesis>=3.19.0
    hypothesis>=6.92.0

[options.entry_points]
console_scripts =
    filagent = runtime.server:main
    filagent-eval = eval.base:main

# Flake8 configuration
[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503, W504
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    models/weights,
    .hypothesis,
    .pytest_cache,
    .mypy_cache,
    htmlcov
max-complexity = 10
per-file-ignores =
    __init__.py:F401,F403
    tests/*:E501,F401

# Enable flake8 plugins
extend-select = B,C,E,F,W
docstring-convention = google
statistics = True
count = True

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0
